# dkr

./: .gitignore  .gitmodules  BUILD.assimp  BUILD.glew  CMakeLists.txt  README  WORKSPACE
.clwb/: .bazelproject
dankerer/: BUILD  CMakeLists.txt  main.cpp
dankerer/base/: BUILD  CMakeLists.txt  timer.cpp  timer.h
dankerer/gfx/: BUILD  CMakeLists.txt  aabb.cpp  aabb.h  camera.cpp  camera.h  commandBuffer.cpp  commandBuffer.h  common.h  drawCommands.h  elementBuffer.cpp  elementBuffer.h  framebuffer.h  lights.h  material.cpp  material.h  mesh.cpp  mesh.h  renderPass.cpp  renderPass.h  renderQueue.cpp  renderQueue.h  renderer.cpp  renderer.h  scene.cpp  scene.h  sceneLoader.cpp  sceneLoader.h  shader.cpp  shader.h  shaderPass.cpp  shaderPass.h  shaderProgram.cpp  shaderProgram.h  staticMesh.cpp  staticMesh.h  texture.cpp  texture.h  uniformBuffer.cpp  uniformBuffer.h  (+8 more)
dankerer/gfx/opengl/: commandBuffer.cpp  commandBuffer.h  device.cpp  device.h  framebuffer.cpp  framebuffer.h  shader.cpp  shaderProgram.cpp  shaderProgram.h  texture.cpp  texture.h  uniformBuffer.cpp  uniformBuffer.h  vertexBuffer.cpp  vertexBuffer.h
dankerer/resources/: config.json  gbuffer.frag  gbuffer.vert  mat.xml  sh1.frag  sh1.vert
dankerer/ui/: BUILD
