add_library(Graphics STATIC
camera.cpp
camera.h
commandBuffer.cpp
commandBuffer.h
common.h
elementBuffer.cpp
elementBuffer.h
framebuffer.cpp
framebuffer.h
material.cpp
material.h
renderer.cpp
renderer.h
shader.cpp
shader.h
shaderProgram.cpp
shaderProgram.h
staticMesh.cpp
staticMesh.h
texture.cpp
texture.h
uniformBuffer.cpp
uniformBuffer.h
vertexArrayConfig.cpp
vertexArrayConfig.h
vertexBuffer.cpp
vertexBuffer.h
window.cpp
window.h
)

target_include_directories(Graphics PUBLIC
${CMAKE_SOURCE_DIR}/dankerer
${CMAKE_SOURCE_DIR}/third_party/glm
${CMAKE_SOURCE_DIR}/third_party/assimp/include
${CMAKE_SOURCE_DIR}/third_party/glfw/include
${CMAKE_SOURCE_DIR}/third_party/entt/src
${GLEW_INCLUDE_DIRS}
${Boost_INCLUDE_DIRS}
${OPENGL_INCLUDE_DIR}
)

target_link_libraries(Graphics 
glfw 
${GLEW_LIBRARIES} 
Boost::filesystem
assimp 
OpenGL::GL)